# parseit

./: .gitignore  README.md
.github/: copilot-instructions.md
backend/: go.mod  go.sum
backend/cmd/api/: main.go
backend/internal/database/: db.go
backend/internal/handlers/: cv_handler.go  job_handler.go  vocabulary_handler.go
backend/internal/models/: cv.go  job.go  vocabulary.go
backend/internal/queue/: redis.go
backend/internal/repository/: cv_repository.go
backend/internal/routes/: routes.go
backend/internal/services/: pdf_service.go
mobile/: .flutter-plugins-dependencies  pubspec.yaml
mobile/lib/: app.dart  main.dart
mobile/lib/config/: dio_client.dart
mobile/lib/data/repositories/: cv_repository.dart  job_repository.dart
mobile/lib/data/services/: api_service.dart
mobile/lib/domain/models/: cv_block.dart  job.dart  vocabulary_term.dart
mobile/lib/routing/: app_router.dart
mobile/lib/ui/: main_wrapper.dart
mobile/lib/ui/add_job/: add_job_screen.dart
mobile/lib/ui/cv_editor/: cv_editor_screen.dart
mobile/lib/ui/cvs/: cv_list_screen.dart  cv_screen.dart
mobile/test/: widget_test.dart
mobile/web/: manifest.json
worker/: Cargo.toml
worker/src/: config.rs  dictionary.rs  main.rs  models.rs  nlp.rs  techs.rs
worker/src/adapters/: config.rs  mod.rs
worker/src/adapters/groq/: client.rs
worker/src/adapters/nlp/: custom_extractor.rs  mod.rs  techs.rs
worker/src/adapters/repository/: postgres.rs
worker/src/domain/: entities.rs  ports.rs
worker/src/usecases/: mod.rs  process_job.rs
(+13 files in other folders)
