[package]
name = "worker-nlp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] } # Para transformar Struct em JSON
serde_json = "1.0"                                 # Para ler JSON
regex = "1.10"                                     # Para limpar o texto