[package]
name = "worker-nlp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
redis = { version = "0.24", features = ["tokio-comp", "tokio-native-tls-comp"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
futures-util = "0.3"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }